# gfunction

./: .coveragerc  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  travis.yml
examples/: 1x2-self_1x2_cross.json  2x2_L-self_single_cross.json  simple.json  single_self_2x2_L-cross.json  single_self_single_cross.json
notebooks/: Validate_pygfunction.ipynb
scripts/: build_linux_travis.sh  build_mac_travis.sh  build_windows_travis.sh
src/: FileSystem.cpp  FileSystem.hpp  gfunction.cpp  gfunction.hpp  main.cpp
tests/: gfunction.unit.cpp  main.cpp
